objects/BMCServiceDesk__CMDB_Class_Mapping_Criteria__c.object
<CustomObject>
    <description>Stores criteria for the Rule Based Asset classes.</description>
    <fields>
        <fullName>BMCServiceDesk__FKCMDB_Class__c</fullName>
        <label>CMDB Class</label>
        <referenceTo>BMCServiceDesk__CMDB_Class__c</referenceTo>
        <relationshipLabel>CMDB Class Mapping Criterias</relationshipLabel>
        <relationshipName>CMDB_Class_Mapping_Criterias</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Field_Info__c</fullName>
        <label>Field Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Grouping_Operator__c</fullName>
        <label>Grouping Operator</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Operand__c</fullName>
        <label>Operand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Operator__c</fullName>
        <label>Operator</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Order_Index__c</fullName>
        <label>Order Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Sequence_Id__c</fullName>
        <description>This field is used for upserting the records.</description>
        <externalId>true</externalId>
        <label>Sequence Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>CMDB Class Mapping Criteria</label>
    <nameField>
        <label>CMDB Class Mapping Criteria #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CMDB Class Mapping Criterias</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>